@@ -1,7 +1,7 @@
 
 <h2>Conclusion</h2>
 
-<p>
+<p align=right>
 We've put a lot of effort into printing nice music.  Thanks to all
 that hard work, you can <a href="@DEPTH@/switch/tour.html">use the
 program to print nice music too</a>.
