@@ -1,8 +1,9 @@
 
 
+<img src="@IMAGES@hader-slaan.jpeg" align="right">
+
 <h2>Music engraving</h2>
 
-<img src="@IMAGES@hader-slaan.jpeg" align="right">
 
 When we know what symbols to print, we have to decide where to put
 them so the the result looks pleasing. This art is called <em>music
@@ -32,7 +33,7 @@ impossible to capture in formal rules.
 
 </ul>
 
-
+<br clear=all>
 <p align=right>
 Next: <a href="implementing-typography.html">Stamping computer
 screens?</a>. Computer hackers take over the engraving business.
