@@ -107,6 +107,5 @@ and representation take up less than 10% of the code.
   >
 
 
-    <p>
-
+<p align=right>
 Next: <a href=conclusion.html>wrapping it up</a>, the conclusion.
