@@ -88,5 +88,6 @@ doubt, measure the difference with a magnifying glass.
 
 </ul>
 
+<p align=right>
 Next: <a href=problem-statement.html>What we really want, but could not
 afford before</a>: better music notation software.
