@@ -53,7 +53,6 @@ combined vertical positions of the notes. The top fragment is printed
 with this correction, the bottom one without.  In the last case, the
 down-stem/up-stems combinations form clumps of notes.
 
-<p>
-
+<p align=right>
 Next: <a href=input-format.html>Use the Source, Luke</a>, or: what
 goes into LilyPond.
